<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a99351.cgnoodlenote.ui.loginandregister.LoginAndRegisterActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/common_top_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
        >
        <ImageView
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:src="@mipmap/welcome_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            />
        <EditText
            android:layout_marginTop="@dimen/dp_20"
            android:id="@+id/et_username"
            style="@style/loginorregister_edittext_style"
            android:hint="@string/input_username"
            android:digits="@string/all_number_and_letter"
            />

        <View
            android:id="@+id/line1"
            style="@style/edittext_below_line_style"
            />
        <EditText
            android:id="@+id/et_password"
            style="@style/loginorregister_edittext_style"
            android:hint="@string/input_password"
            android:digits="@string/all_number_and_letter"
            />
        <View
            android:id="@+id/line2"
            style="@style/edittext_below_line_style"
            />
        <LinearLayout
            android:id="@+id/ll_layout_forget_password_and_goto_register"
            style="@style/loginorregister_edittext_style"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:text="忘记密码？"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_forget_password"
                android:text="立即获取"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:text="还没注册？"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_goto_register"
                android:text="立即注册"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_layout_input_activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/et_activation_code"
                style="@style/loginorregister_edittext_style"
                android:hint="@string/input_activation_code"
                />
            <View
                android:id="@+id/line3"
                style="@style/edittext_below_line_style"
                />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_layout_get_activation_code"
            style="@style/loginorregister_edittext_style"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:text="还没有获得激活码？"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_get_activation_code"
                android:textColor="@color/colorAccent"
                android:text="立即获取"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_commit"
            style="@style/commit_button_style"
            android:text="@string/login"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
